bug(responsiveness) : fix responsiveness issue on mobile device
- enforce custom styling for different screens
- change the base url to production

[#167597713]

--- a/src/app/pages/login/login-header/login-header.component.scss
+++ b/src/app/pages/login/login-header/login-header.component.scss
@@ -1,19 +1,20 @@
 .logo img{
-    width: 120px;
-    margin: 1rem 10rem 1rem 13rem;
-  }
-  
-  .logo p{
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    font-size: 25px;
-    font-weight: lighter;
-    margin: 1px 10rem 1rem 13.5rem;
-  }
+  width: 120px;
+  margin: 1rem 10rem 1rem 13rem;
+}
 
-  @media only screen and (max-width: 480px) {
-    .logo {
-      padding-top: 139px;
-    }
-    }
-  
+.logo p{
+  font-family: Arial, Helvetica, sans-serif;
+  color: white;
+  font-size: 25px;
+  font-weight: lighter;
+  margin: 1px 10rem 1rem 13.5rem;
+}
+
+@media only screen and (max-width: 480px) {
+  .logo {
+    transform: scale(0.9);
+    padding-top: 72px;
+    padding-left: 169px;
+  }
+}
